# box-base

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEBUDDY.md  CONTRIBUTING.md  README.md
.cursor/rules/: main.mdc
.github/workflows/: ci.yml
backend/: .env  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 3196e867fda3_add_user_and_tenant.py  9305bc9a7144_add_membership.py  ad57abfb0aa7_add_role_permission_membership_role_.py  b845e3107bf8_baseline.py  ed48c00ce20e_add_refresh_token.py
backend/boxbase/: __init__.py  config.py  database.py  dependencies.py  main.py  security.py
backend/boxbase/models/: __init__.py  base.py  membership.py  membership_role.py  permission.py  refresh_token.py  role.py  role_permission.py  tenant.py  user.py
backend/boxbase/tools/: __init__.py  seed.py
backend/tests/: conftest.py  test_health.py  test_openapi.py  test_security.py
docs/: AGENTS.zh.md
docs/architecture/: 2026-W2-auth-tenant-rbac-design.md
docs/decisions/: 2026-05-26-architecture-decisions.md  2026-05-27-ad-frontend.md  2026-0526-day1-archive.md  2026-0526-day2-3-archive.md  2026-0527-day4-archive.md  2026-0527-day4-tech-stack-update.md  2026-0527-day5-archive.md  2026-0527-day6-archive.md  2026-0528-day5-archive.md  2026-0528-day6-ending-archive.md  2026-0529-api-health-integration.md  2026-0530-week2-day1-auth-design-review.md  2026-0530-week2-day2-slice1-9-complete.md
docs/journal/: 2026-05-26-day1.md
docs/retrospectives/: 2026-W1-retrospective.md
frontend/: .prettierignore  README.md  _install_deps.bat  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  router.tsx
frontend/src/api/: health.ts
frontend/src/pages/: DashboardPage.tsx  HomePage.tsx  LoginPage.tsx  NotFoundPage.tsx
ops/: COMMANDS.md  PROMPTS.md
